# UTP_PROJECT_JAVA

./: README.md
Project/: CMakeLists.txt  GUI_Board_CheckListener.cpp  main_Board.h
src/: Board.java  Board_CheckListener.h  Cell.java  CheckersGameGUI.java  Main.java  MainMenu.java
src/GUI/: Board.java  Check.java  GUI_Board_CheckListener.h  MainMenu.java
src/Tests/: Tests.java
src/main/: Board.java  Cell.java  Main.java  main_Board.h
